@@ -43,7 +43,8 @@
 
 
 <div id="librarySidebar"><ul class="simple">
-<li><a class="reference external" href="http://code.google.com/p/libtorrent/downloads/list">download</a></li>
+<li><a class="reference external" href="https://sourceforge.net/projects/libtorrent/files/libtorrent/">download</a></li>
+<li><a class="reference external" href="https://sourceforge.net/projects/libtorrent/files/py-libtorrent/">download python binding</a></li>
 <li><a class="reference external" href="features.html">features</a></li>
 <li><a class="reference external" href="contributing.html">contributing</a></li>
 <li><a class="reference external" href="building.html">building libtorrent</a></li>
