@@ -23,6 +23,7 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* support magnet links wrapped in .torrent files
 	* rate limiter optimization
 	* rate limiter overflow fix (for very high limits)
 	* non-auto-managed torrents no longer count against the torrent limits
@@ -63,6 +64,9 @@
 	  with more files
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
+
+	* improve error_code and error_category support in python bindings
+	* fix python binding for external_ip_alert
 
 0.16.14 release
 
